--- a/src/stories/Basic-components.stories.mdx
+++ b/src/stories/Basic-components.stories.mdx
@@ -118,4 +118,4 @@ import StackAlt from './assets/stackalt.svg';
 
 Athen provides a set of well known basic components. These are basic components you expect to find in every modern UI framework.
 
-Athenas basic components provides a good starting point for every web application with responsive layout and modern functionality for moder use cases.
+Athenas basic components provides a good starting point for every web application with responsive layout and modern functionality for modern use cases.
